# whatshap

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGES.rst  CITATION  CITATION.rst  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.md  README.rst  README_PARALLEL.rst  Snakefile  buildwheels.sh  example.py  kmerald_doc.txt  mypy.ini  phasedblocks.py  pyproject.toml  requirements.txt  run.sh  setup.cfg  setup.py  stream.py  test.py  tox.ini
.github/: issue_template.md
.github/workflows/: ci.yml  macos.yml
cpp-standalone/: .gitignore  CMakeLists.txt
doc/: Makefile  README.rst  conf.py  develop.rst  faq.rst  guide.rst  howtocite.rst  index.rst  installation.rst  notes.rst  requirements.txt
fastflow-r383/: AUTHORS  BUILD.ME  FAQ.txt  README
fastflow-r383/ff/: MPMCqueues.hpp  allocator.hpp  barrier.hpp  buffer.hpp  config.hpp  dinout.hpp  dnode.hpp  dynlinkedlist.hpp  dynqueue.hpp  farm.hpp  fftree.hpp  gsearch.hpp  gt.hpp  lb.hpp  make_unique.hpp  map.hpp  mapCUDAManaged.hpp  mapper.hpp  mapping_utils.hpp  mdf.hpp  multinode.hpp  node.hpp  oclallocator.hpp  oclnode.hpp  parallel_for.hpp  parallel_for_internals.hpp  pipeline.hpp  poolEvolution.hpp  poolEvolutionCUDA.hpp  selector.hpp  (+11 more)
logo/: Makefile  README.md  whatshap_logo.lpop
misc/: example.py
scripts/: extract-het-pos.py  getEnds-vcf.py  mergeEnds.py  phasedblocks.py  superread-to-haplotype.py  tobis-slicer.py  whatshap.py  wifreader.py
src/: .#read.h  CMakeLists.txt  DP_matrix.cpp  DP_matrix.h  Makefile  activelist.cpp  activelist.h  activelistdelegator.cpp  activelistdelegator.h  backwardcolumniterator.cpp  backwardcolumniterator.h  binomial.cpp  binomial.h  caller.cpp  caller.h  column.cpp  column.h  columncostcomputer.cpp  columncostcomputer.h  columnindexingiterator.cpp  columnindexingiterator.h  columnindexingscheme.cpp  columnindexingscheme.h  columniterator.cpp  columniterator.h  columnreader.cpp  columnreader.h  dice.cpp  dicer.cpp  dicer.h  dp  dp.cpp  dptable.cpp  dptable.h  dptable_whitecodes.cpp  dptable_whitecodes.h  emissionprobabilitycomputer.cpp  emissionprobabilitycomputer.h  entry.cpp  entry.h  (+53 more)
src/clusterediting/: ClusterEditingSolutionLight.cpp  ClusterEditingSolutionLight.h  CoreAlgorithm.cpp  CoreAlgorithm.h  DynamicSparseGraph.cpp  DynamicSparseGraph.h  EdgeHeap.cpp  EdgeHeap.h  Globals.cpp  Globals.h  HaploThreader.h  Helpers.cpp  Helpers.h  InducedCostHeuristic.cpp  InducedCostHeuristic.h  LightCompleteGraph.cpp  LightCompleteGraph.h  ProgressPrinter.cpp  ProgressPrinter.h  ReadScoring.cpp  ReadScoring.h  SolutionChecker.cpp  SolutionChecker.h  StaticSparseGraph.cpp  StaticSparseGraph.h  TriangleSparseMatrix.cpp
src/hapchat/: HapCHATcore.cpp  balanced_combinations.cpp  balanced_combinations.h  balancedcombinations.cpp  balancedcombinations.h  basic_types.cpp  basic_types.h  basictypes.cpp  basictypes.h  binomial.cpp  binomial.h  binomialcoefficient.cpp  binomialcoefficient.h  blockreader.cpp  blockreader.h  columniterator.h  combinations.h  entry.cpp  entry.h  fondamental.cpp  hapchat_core.cpp  hapchatcolumniterator.cpp  hapchatcore.cpp  log.h  new_columnreader.cpp  new_columnreader.h  prova.cpp  prova2.cpp
src/polyphase/: ClusterEditingSolutionLight.cpp  ClusterEditingSolutionLight.h  ClusterEditingSolver.cpp  ClusterEditingSolver.h  DynamicSparseGraph.h  EdgeHeap.cpp  EdgeHeap.h  Globals.cpp  Globals.h  HaploThreader.cpp  HaploThreader.h  Helpers.cpp  InducedCostHeuristic.cpp  InducedCostHeuristic.h  ProgressPrinter.cpp  ReadScoring.cpp  ReadScoring.h  SolutionChecker.cpp  StaticSparseGraph.h  TriangleSparseMatrix.cpp  TriangleSparseMatrix.h  allelematrix.cpp  allelematrix.h  clustereditingsolution.cpp  clustereditingsolution.h  clustereditingsolver.cpp  clustereditingsolver.h  dynamicsparsegraph.cpp  dynamicsparsegraph.h  edgeheap.cpp  edgeheap.h  haplothreader.cpp  haplothreader.h  inducedcostheuristic.cpp  inducedcostheuristic.h  progenygenotypelikelihoods.cpp  progenygenotypelikelihoods.h  readscoring.cpp  readscoring.h  staticsparsegraph.cpp  (+8 more)
src/testing/: CMakeLists.txt  catch.hpp  test.cpp
src/threading/: HaploThreader.cpp  HaploThreader.h
tests/: locus_tests  phasingutils.py  test.matrix  test_align.py  test_align_affine.py  test_allelematrix.py  test_bam.py  test_clusterediting.py  test_clusterphasing.py  test_commandline.py  test_connect.py  test_geneticmap.py  test_genotyping.py  test_graph.py  test_kmeralign.py  test_learn.py  test_main.py  test_max_flow.py  test_merge_reads.py  test_misc.py  test_offspringscoring.py  test_pedigree.py  test_pedigreegenotyping.py  test_pedigreephasing.py  test_pedreader.py  test_phasing.py  test_phasing_4alleles.py  test_phasing_multiallelic.py  test_polyphasegenetic.py  test_polyploid_phasing.py  test_polyploidphasing.py  test_priorityqueue.py  test_pruning.py  test_read_grouping.py  test_reads.py  test_readscoring.py  test_readselect.py  test_readsetreader.py  test_reorder.py  test_run_call.py  (+56 more)
tools/: evaluate-phasing-multiway.py  evaluate-phasing.py
whatshap/: .gitignore  Binary_Search_Tree.py  __init__.py  __main__.py  _call.pyx  _core.pxd  _core.pyx  _variants.pyi  _variants.pyx  _version.py  align.pyi  align.pyx  align_old.pyx  args.py  bam.py  blockparser.pyx  blockparser_evaluate.py  blockparser_inference.py  blockparsing.py  call.py  clusterarrangement.py  clusterediting.py  clusterediting_ext.pyx  clusterediting_solver.pyx  clustereditingphase.py  clustereditingplots.py  clusterhomogeneityplots.py  compare.py  compute_ref.py  connect.py  connect_analysis.py  connect_analysis_2.py  core.pxd  core.py  core.pyi  core.pyx  coverage.py  cpp.pxd  cppwrapper.pyx  customcontainer.py  (+71 more)
whatshapdenovo/: README.md  install.sh
whatshapdenovo/tools/CONSENT/BMEAN/spoa/: .gitmodules  CMakeLists.txt  README.md
whatshapdenovo/tools/CONSENT/BMEAN/spoa/include/spoa/: architectures.hpp  graph.hpp
whatshapdenovo/tools/CONSENT/BMEAN/spoa/src/: alignment_engine.cpp  dispatcher.cpp  graph.cpp  main.cpp  simd_alignment_engine.hpp  simd_alignment_engine_dispatch.cpp  simd_alignment_engine_impl.hpp
(+422 files in other folders)
