[build-system]
requires = ["setuptools>=63", "setuptools_scm[toml]", "cython~=0.29.20"]
build-backend = "setuptools.build_meta"

[project]
name = "whatshap"
authors = [
    {name = "WhatsHap authors"}
]
description = "phase genomic variants using DNA sequencing reads"
readme = "doc/README.rst"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Cython",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Bio-Informatics"
]
requires-python = ">=3.7"
dynamic = ["version", "dependencies"]

[project.scripts]
whatshap = "whatshap.__main__:main"

[project.optional-dependencies]
dev = [
    "Cython",
    "pytest",
    "sphinx>=4.4",
    "sphinx-issues",
    "pysam-stubs"
]
docs = [
    "sphinx<7", "sphinx_rtd_theme",  # https://github.com/readthedocs/readthedocs.org/issues/10279#issuecomment-1544411815
    "sphinx-issues",
    "sphinx_better_subsection"
]

[project.urls]
"Homepage" = "https://github.com/whatshap/whatshap"
"Changelog" = "https://whatshap.readthedocs.io/en/latest/changes.html"

[tool.setuptools.packages.find]
include = ["whatshap*"]

[tool.setuptools.exclude-package-data]
whatshap = ["*.cpp"]

[tool.setuptools_scm]
write_to = "whatshap/_version.py"

[tool.black]
line-length = 100
target-version = ["py37"]

[tool.mypy]
warn_unused_configs = true

[[tool.mypy.overrides]]
module = [
    "pyfaidx",
    "matplotlib.*",
    "pylab",
    "scipy.stats",
    "scipy.special",
    "networkx",
    "pulp",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "--doctest-modules"
testpaths = ["tests", "whatshap"]

[tool.cibuildwheel]
environment = "CFLAGS=-g0"
# Disable tests for the moment because pip attempts to install pysam
# from source for some reason although wheels exist.
# test-requires = "pytest"
# test-command = ["cd {project} ; pytest tests/test_run_phase.py"]

[tool.ruff]
line-length = 100
ignore = ["E501"]  # line too long
