[build-system]
requires = ["setuptools>=77.0.3", "setuptools_scm[toml]", "cython~=3.0.11"]
build-backend = "setuptools.build_meta"

[project]
name = "whatshap"
authors = [
    {name = "WhatsHap authors"}
]
description = "phase genomic variants using DNA sequencing reads"
readme = "doc/README.rst"
license = "MIT"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Programming Language :: Cython",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Bio-Informatics"
]
requires-python = ">=3.9"
dependencies = [
    "pysam >= 0.18.0",
    "pyfaidx >= 0.5.5.2",
    "networkx",
    "biopython >= 1.73",  # pyfaidx needs this for reading bgzipped FASTA files
    "scipy",
    "xopen >= 1.2.0",
    "pulp >= 2",
]
dynamic = ["version"]

[project.scripts]
whatshap = "whatshap.__main__:main"

[project.optional-dependencies]
dev = [
    "Cython",
    "pytest",
    "hypothesis",
    "sphinx>=4.4",
    "sphinx-issues",
    "pysam-stubs"
]
docs = [
    "sphinx<7", "sphinx_rtd_theme",  # https://github.com/readthedocs/readthedocs.org/issues/10279#issuecomment-1544411815
    "sphinx-issues",
    "sphinx_better_subsection"
]

[project.urls]
"Homepage" = "https://github.com/whatshap/whatshap"
"Changelog" = "https://whatshap.readthedocs.io/en/latest/changes.html"

[tool.setuptools.packages.find]
include = ["whatshap*"]

[tool.setuptools.exclude-package-data]
whatshap = ["*.cpp"]

[tool.setuptools_scm]
write_to = "whatshap/_version.py"

[tool.black]
line-length = 100
target-version = ["py37"]

[tool.mypy]
warn_unused_configs = true

[[tool.mypy.overrides]]
module = [
    "pyfaidx",
    "matplotlib.*",
    "pylab",
    "scipy.stats",
    "scipy.special",
    "networkx",
    "pulp",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "--doctest-modules"
testpaths = ["tests", "whatshap"]

[tool.cibuildwheel]
# Set CFLAGS explicitly so that we get builds without debug info (-g),
# which otherwise increases wheel size a lot
environment = "CFLAGS=-O3 CXXFLAGS=-O3"
build-verbosity = 1
# Disable tests for the moment because pip attempts to install pysam
# from source for some reason although wheels exist.
# test-requires = "pytest"
# test-command = ["cd {project} ; pytest tests/test_run_phase.py"]

[tool.ruff]
line-length = 100
lint.ignore = [
    "E501",  # line too long
    "E741",  # Ambiguous variable name
]
