[metadata]
name = whatshap
author = WhatsHap authors
author_email = whatshap@cwi.nl
url = https://github.com/whatshap/whatshap
description = phase genomic variants using DNA sequencing reads
license = MIT
long_description = file: doc/README.rst
long_description_content_type = text/x-rst
project_urls =
    Changelog = https://whatshap.readthedocs.io/en/latest/changes.html
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Cython
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Bio-Informatics

[options]
python_requires = >=3.7
packages = find:

[options.entry_points]
console_scripts =
    whatshap = whatshap.__main__:main

[options.extras_require]
dev =
    Cython
    pytest
    sphinx
    sphinx-issues
    pysam-stubs
docs =
    sphinx-issues
